<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_layout_margin"
    tools:context="com.example.android.relax.SessionsActivity">

    <!-- Sets Zazen as active meditation session. -->
    <Button
        android:id="@+id/buttonBuiltInZazen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/string_builtIn_session_zazen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Sets Positive self-hypnosis as active meditation session. -->
    <Button
        android:id="@+id/buttonBuiltInPositivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:layout_marginTop="8dp"
        android:text="@string/string_builtIn_session_positivity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBuiltInZazen" />

    <!-- Activity description. -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNew"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBuiltInPositivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSessionsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_activity_sessions_description" />
        </LinearLayout>
    </ScrollView>

    <!-- Create new meditation session, points to.... -->
    <Button
        android:id="@+id/buttonNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/string_new"
        app:layout_constraintBottom_toTopOf="@+id/buttonSessionsHome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- Points to home screen, MainActivity. -->
    <Button
        android:id="@+id/buttonSessionsHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
