<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_layout_margin"
    tools:context="com.example.android.relax.MainActivity">

    <!-- Points to AudioLibraryActivity. -->
    <Button
        android:id="@+id/buttonAudioLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_library"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonSettings"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Points to  SettingsActivity. -->
    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_settings"
        app:layout_constraintLeft_toRightOf="@+id/buttonAudioLibrary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Points to .... -->
    <Button
        android:id="@+id/buttonMeditationSessions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_meditation_profiles"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAudioLibrary" />

    <!-- Description of the activity. -->
    <ScrollView
        android:id="@+id/scrollViewActivityMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMeditationSessions"
        app:layout_constraintBottom_toTopOf="@+id/seekBar2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewActivityMainDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_activity_main_description" />

        </LinearLayout>
    </ScrollView>

    <!-- Active session duration.  -->
    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewActiveSession"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- Displays active meditation session and actual segment. -->
    <TextView
        android:id="@+id/textViewActiveSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/string_active_session"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonStop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- Starts the meditation session. -->
    <ImageButton
        android:id="@+id/imageButtonPlay"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_play" />

    <!-- Pauses the meditation session. -->
    <ImageButton
        android:id="@+id/imageButtonPause"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonPlay"
        app:srcCompat="@drawable/ic_pause"
        android:layout_marginStart="8dp" />

    <!-- Stops meditation session. -->
    <ImageButton
        android:id="@+id/imageButtonStop"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonPause"
        app:srcCompat="@drawable/ic_stop"
        android:layout_marginStart="8dp" />

    <!-- Turns audio on or off. -->
    <ToggleButton
        android:id="@+id/toggleButtonVolume"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginLeft="8dp"
        android:textOff="@string/string_audio_off"
        android:textOn="@string/string_audio_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonStop"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp" />
</android.support.constraint.ConstraintLayout>
