<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_layout_margin"
    tools:context="com.example.android.relax.AudioLibraryActivity">

    <!-- Imports user's media files. -->
    <Button
        android:id="@+id/buttonImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/string_Import"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonBuyAudio"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Lets the user buy media content. -->
    <Button
        android:id="@+id/buttonBuyAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Buy"
        app:layout_constraintLeft_toRightOf="@+id/buttonImport"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Description of the activity. -->
    <ScrollView
        android:id="@+id/scrollViewAudioLibrary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonHome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonImport">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAudioLibraryDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_activity_audio_library_description"
                android:textColor="@color/colorIconsText" />
        </LinearLayout>
    </ScrollView>

    <!-- Points to MainActivity. -->
    <Button
        android:id="@+id/buttonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
