<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_layout_margin"
    tools:context="com.example.android.relax.NewSegmentActivity">

    <!-- Dummy view to block EditText focus. -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText" />

    <!-- EditText name of segment edited by user. -->
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_hint_segment_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/editText" />

    <!-- Description of the activity. -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSegmentSave"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewEditSegmentDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_activity_new_segment_description" />
        </LinearLayout>
    </ScrollView>

    <!-- Save button, save changes and return to NewSessionActivity. -->
    <Button
        android:id="@+id/buttonSegmentSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonSegmentCancel" />

    <!-- Cancel button, return to NewSessionActivity. -->
    <Button
        android:id="@+id/buttonSegmentCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/buttonSegmentSave"/>

</android.support.constraint.ConstraintLayout>
